# mxm_sp23-Learning

./: .gitignore  FinalSimulation.ipynb  FinalSimulation.py  LoCA_2stage.ipynb  LoCA_2stage.py  MBQagent.py  QLearning.py  Q_learning_V_S__R_max_for_LoCA.ipynb  README.md  agent.py  all.py  custom_env.py  daw_etal_two_stage.py  dyna.py  flake.nix  main.py  notebook.ipynb  pyproject.toml  qlearning.py  requirements.txt  rmax.ipynb  sarsa.py
config/: flake.nix  requirements.txt
gymnasium enviroments/: daw_etal_two_stage.py
gymnasium environments/: Compare_Reward.ipynb  Q_learning_V_S__R_max_for_LoCA.ipynb  main.py  pyproject.toml
