[tool.poetry]
name = "polarbear"
version = "0.1.0"
description = ""
authors = ["Jack Maloney <jmaloney3@wisc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
gymnasium = "^0.27.1"
pandas = "^1.5.3"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
